--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -82,6 +82,7 @@ allow 108.59.12.41;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
+allow 109.228.160.190;
 allow 109.237.27.11;
 allow 109.69.67.17;
 allow 109.70.100.1;
@@ -425,7 +426,6 @@ allow 185.220.101.97;
 allow 185.220.101.98;
 allow 185.220.101.99;
 allow 185.225.69.187;
-allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.227.134.106;
 allow 185.227.68.78;
@@ -574,10 +574,6 @@ allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.246.231.197;
-allow 195.47.238.176;
-allow 195.47.238.177;
-allow 195.47.238.178;
-allow 195.47.238.44;
 allow 195.47.238.90;
 allow 195.47.238.91;
 allow 195.47.238.92;
@@ -874,7 +870,6 @@ allow 23.129.64.224;
 allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.248.100;
-allow 23.137.253.113;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -892,7 +887,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -900,9 +894,11 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
+allow 23.191.200.28;
+allow 23.191.200.3;
+allow 23.191.200.30;
+allow 23.191.200.31;
 allow 23.191.200.4;
-allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -1389,10 +1385,6 @@ allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
-allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
-allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
-allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
-allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:9a40:8860:51::aa11;
@@ -1443,6 +1435,7 @@ allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
+allow 2a0e:bfc0:0:12::9a57;
 allow 2a0e:bfc0:0:14::24a8;
 allow 2a0e:bfc0:0:2::8a62;
 allow 2a0e:bfc0:0:5::2;
