--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -82,7 +82,6 @@ deny 108.59.12.41;
 deny 108.61.189.136;
 deny 109.104.153.22;
 deny 109.169.33.163;
-deny 109.228.160.190;
 deny 109.237.27.11;
 deny 109.69.67.17;
 deny 109.70.100.1;
@@ -122,6 +121,7 @@ deny 130.193.10.21;
 deny 130.193.15.186;
 deny 130.193.15.79;
 deny 131.72.79.38;
+deny 13.232.141.189;
 deny 135.125.239.51;
 deny 135.125.239.70;
 deny 136.244.111.163;
@@ -252,7 +252,6 @@ deny 185.100.87.192;
 deny 185.100.87.250;
 deny 185.100.87.41;
 deny 185.10.16.41;
-deny 185.104.120.10;
 deny 185.104.120.30;
 deny 185.104.120.40;
 deny 185.106.102.102;
@@ -574,6 +573,9 @@ deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
 deny 195.246.231.197;
+deny 195.47.238.176;
+deny 195.47.238.178;
+deny 195.47.238.44;
 deny 195.47.238.90;
 deny 195.47.238.91;
 deny 195.47.238.92;
@@ -874,7 +876,6 @@ deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.244;
 deny 23.151.8.8;
-deny 23.155.8.104;
 deny 23.184.48.78;
 deny 23.190.216.8;
 deny 23.191.200.10;
@@ -894,10 +895,11 @@ deny 23.191.200.23;
 deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
+deny 23.191.200.27;
 deny 23.191.200.28;
+deny 23.191.200.29;
 deny 23.191.200.3;
 deny 23.191.200.30;
-deny 23.191.200.31;
 deny 23.191.200.4;
 deny 23.191.200.6;
 deny 23.191.200.7;
@@ -930,7 +932,6 @@ deny 2600:3c04::f03c:95ff:fe41:d42c;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
 deny 2600:3c16::2000:eaff:fe85:3765;
-deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
@@ -1237,7 +1238,6 @@ deny 2a06:1700:1:108::b829:eee2;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
-deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
@@ -1385,6 +1385,9 @@ deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+deny 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
+deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
+deny 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:6a41:c13:1337::107;
 deny 2a0c:9a40:8860:51::aa11;
@@ -1435,12 +1438,13 @@ deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:97c0:3ea:882::1;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
-deny 2a0e:bfc0:0:12::9a57;
+deny 2a0e:bfc0:0:12:baad:f00d:c0fe:babe;
 deny 2a0e:bfc0:0:14::24a8;
 deny 2a0e:bfc0:0:2::8a62;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:bfc7::216:3cff:fe6f:c4ca;
+deny 2a0e:bfc7::216:3cff:fece:19ec;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:16a4::1;
@@ -1849,7 +1853,6 @@ deny 93.123.109.116;
 deny 93.123.109.44;
 deny 93.123.12.112;
 deny 93.94.51.243;
-deny 93.94.52.229;
 deny 93.95.227.37;
 deny 93.95.228.125;
 deny 93.95.231.118;
