--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -101,7 +101,6 @@ allow 109.71.252.182;
 allow 109.71.252.88;
 allow 109.71.252.97;
 allow 114.35.245.150;
-allow 115.131.180.3;
 allow 118.163.74.160;
 allow 121.78.28.166;
 allow 123.253.35.32;
@@ -130,7 +129,6 @@ allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.98.11.62;
-allow 143.20.64.235;
 allow 144.126.133.74;
 allow 144.172.73.31;
 allow 146.103.43.17;
@@ -584,7 +582,6 @@ allow 195.47.238.44;
 allow 195.47.238.90;
 allow 195.47.238.91;
 allow 195.47.238.92;
-allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
@@ -878,6 +875,7 @@ allow 23.129.64.224;
 allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.248.100;
+allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -895,7 +893,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -903,12 +900,11 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
-allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
+allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
@@ -956,6 +952,7 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1217,7 +1214,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1393,7 +1389,6 @@ allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:4d00:2:8::2;
 allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
-allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
@@ -1554,7 +1549,6 @@ allow 2a12:a800:9:1:45:88:186:92;
 allow 2a12:bec4:1821:3a6::a;
 allow 2a12:bec4:1821:3a7::a;
 allow 2a12:bec4:1821:3a8::a;
-allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:d::d28b;
@@ -1706,7 +1700,6 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
