--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -101,7 +101,6 @@ deny 109.71.252.182;
 deny 109.71.252.88;
 deny 109.71.252.97;
 deny 114.35.245.150;
-deny 115.131.180.3;
 deny 118.163.74.160;
 deny 121.78.28.166;
 deny 123.253.35.32;
@@ -130,7 +129,6 @@ deny 138.59.18.110;
 deny 139.99.172.11;
 deny 139.99.8.57;
 deny 141.98.11.62;
-deny 143.20.64.235;
 deny 144.126.133.74;
 deny 144.172.73.31;
 deny 146.103.43.17;
@@ -584,7 +582,6 @@ deny 195.47.238.44;
 deny 195.47.238.90;
 deny 195.47.238.91;
 deny 195.47.238.92;
-deny 195.47.238.93;
 deny 195.80.151.242;
 deny 195.88.74.206;
 deny 196.196.200.100;
@@ -878,6 +875,7 @@ deny 23.129.64.224;
 deny 23.129.64.225;
 deny 23.129.64.99;
 deny 23.137.248.100;
+deny 23.137.253.109;
 deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.244;
@@ -895,7 +893,6 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
-deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -903,12 +900,11 @@ deny 23.191.200.23;
 deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
-deny 23.191.200.27;
 deny 23.191.200.28;
 deny 23.191.200.29;
-deny 23.191.200.3;
 deny 23.191.200.30;
 deny 23.191.200.31;
+deny 23.191.200.4;
 deny 23.191.200.5;
 deny 23.191.200.6;
 deny 23.191.200.7;
@@ -956,6 +952,7 @@ deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:18:f38f::1;
+deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:100:3::14;
@@ -1217,7 +1214,6 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1393,7 +1389,6 @@ deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:4d00:2:8::2;
 deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
-deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 deny 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
@@ -1554,7 +1549,6 @@ deny 2a12:a800:9:1:45:88:186:92;
 deny 2a12:bec4:1821:3a6::a;
 deny 2a12:bec4:1821:3a7::a;
 deny 2a12:bec4:1821:3a8::a;
-deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
 deny 2c0f:6c0:0:2::6983;
 deny 2c0f:6c0:0:d::d28b;
@@ -1706,7 +1700,6 @@ deny 51.81.222.62;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
