--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -149,6 +149,7 @@ deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:18:f38f::1;
+deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:100:3::14;
@@ -409,7 +410,6 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -585,7 +585,6 @@ deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:4d00:2:8::2;
 deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
-deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 deny 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
@@ -746,7 +745,6 @@ deny 2a12:a800:9:1:45:88:186:92;
 deny 2a12:bec4:1821:3a6::a;
 deny 2a12:bec4:1821:3a7::a;
 deny 2a12:bec4:1821:3a8::a;
-deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
 deny 2c0f:6c0:0:2::6983;
 deny 2c0f:6c0:0:d::d28b;
