--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -213,7 +213,6 @@ allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
 allow 177.93.140.66;
-allow 178.162.175.5;
 allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
@@ -580,14 +579,13 @@ allow 195.47.238.177;
 allow 195.47.238.178;
 allow 195.47.238.44;
 allow 195.47.238.90;
-allow 195.47.238.91;
 allow 195.47.238.92;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
 allow 196.251.69.116;
 allow 196.251.84.71;
-allow 198.167.206.202;
+allow 198.167.206.211;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -901,9 +899,7 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.28;
-allow 23.191.200.29;
 allow 23.191.200.30;
-allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
@@ -1162,6 +1158,7 @@ allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
+allow 2a01:e5c0:9ef2::2;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1390,7 +1387,6 @@ allow 2a0b:f4c2::9;
 allow 2a0c:4d00:2:8::2;
 allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
-allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
@@ -1744,7 +1740,6 @@ allow 64.190.76.13;
 allow 64.190.76.2;
 allow 64.190.76.3;
 allow 64.190.76.4;
-allow 64.94.85.248;
 allow 65.87.7.198;
 allow 66.146.193.33;
 allow 66.220.242.222;
@@ -1792,7 +1787,6 @@ allow 82.221.139.190;
 allow 8.222.227.10;
 allow 83.147.17.190;
 allow 83.217.9.73;
-allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
@@ -1850,7 +1844,6 @@ allow 93.123.109.116;
 allow 93.123.109.44;
 allow 93.123.12.112;
 allow 93.94.51.243;
-allow 93.94.52.229;
 allow 93.95.227.37;
 allow 93.95.228.125;
 allow 93.95.231.118;
@@ -1874,6 +1867,7 @@ allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.143.193.125;
 allow 95.168.173.143;
+allow 95.181.173.155;
 allow 95.211.244.28;
 allow 96.8.119.172;
 allow 98.128.173.33;
