--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -358,6 +358,7 @@ set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
+set_real_ip_from 2a01:e5c0:9ef2::2;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -586,7 +587,6 @@ set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:4d00:2:8::2;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
